🐛 Fix z-index

--- a/src/components/HomeBar/HomeBar.module.scss
+++ b/src/components/HomeBar/HomeBar.module.scss
@@ -7,5 +7,5 @@
   transform: translateX(-50%);
   border-radius: 1rem;
   cursor: pointer;
-  z-index: 999;
+  z-index: 30;
 }
